[package]
name = "sf-nft"
description = "Non-fungible token pallet provides basic functions to create and manage NFTs"
repository = "https://github.com/SugarFunge/sf-node"
license = "Apache-2.0"
version = "0.1.0"
authors = ['Alex Rozgo <alex.rozgo@gmail.com>']
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { git = "https://github.com/SugarFunge/substrate.git", version = "3.0.0", default-features = false }
sp-runtime = { git = "https://github.com/SugarFunge/substrate.git", version = "3.0.0", default-features = false }

frame-support = { git = "https://github.com/SugarFunge/substrate.git", version = "3.0.0", default-features = false }
frame-system = { git = "https://github.com/SugarFunge/substrate.git", version = "3.0.0", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/SugarFunge/substrate.git" }
sp-core = { git = "https://github.com/SugarFunge/substrate.git" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
