[package]
name = 'sugarfunge-token'
version = '0.1.0'
authors = ["SugarFunge Developers"]
edition = "2018"
license = 'GPL-3.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }

sugarfunge-primitives = { package = "sugarfunge-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }

[features]
default = ['std']
std = [
    'serde/std',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-core/std',
    'sugarfunge-primitives/std',
]
