[package]
name = 'sugarfunge-validator-set'
version = '0.1.0'
authors = ['Gautam Dhameja <quasijatt@outlook.com>', "SugarFunge Developers"]
edition = '2021'
license = 'Apache-2.0'

[dependencies]
log = { version = "0.4.17", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }

pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false, features = ['historical'] }

[dev-dependencies]

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-core/std",
    "pallet-session/std",
]

# [dev-dependencies.serde]
# features = ['derive']
# version = '1.0'

# [features]
# default = ['std']
# runtime-benchmarks = ['frame-benchmarking']
# std = [
#     'codec/std',
#     'frame-benchmarking/std',
#     'frame-support/std',
#     'frame-system/std',
#     'scale-info/std',
#     'sp-core/std',
#     'sp-io/std',
#     'sp-std/std',
#     'sp-runtime/std',
#     'pallet-session/std'
# ]
# try-runtime = ['frame-support/try-runtime']