[package]
name = "sugarfunge-asset-rpc"
version = "0.1.0"
authors = ["SugarFunge Developers"]
edition = "2021"
license = "Proprietary"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"

sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }

sugarfunge-asset-rpc-runtime-api = { version = "0.1.0", path = "./runtime-api" }


