[package]
name = "sugarfunge-asset-rpc-runtime-api"
version = "0.1.0"
authors = ["SugarFunge Developers"]
edition = "2021"
license = "Proprietary"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", default-features = false }
sugarfunge-asset = { package = "sugarfunge-asset", path = "../../../asset", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-runtime/std",
	"sugarfunge-asset/std",
]
